Favicons and touch-icons

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#22292f">
+    <meta name="theme-color" content="#794acf">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-64.png" sizes="64x64" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-96.png" sizes="96x96" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png">
+    <link rel="mask-icon" href="%PUBLIC_URL%/safari-tab.svg" color="#794acf">
+
     <title>ZUCKERBERGERME</title>
     <meta name="robots" content="none" />
   </head>
